Added Tests for other utility methods and corrected the logic if required